[project]
name = "balloons"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Aaron Isaacs",email = "isaacsaaron@gmail.com"},
]
dependencies = ["streamlit>=1.58.0"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
